crates/cli/tests/snapshots/list_concat_merge__fix_f98f7fe78342e992338f500f79b2746d3d43297551e2ba90003f1a98fe13ca9a.snap
---
source: crates/cli/tests/list_concat_merge.rs
expression: "\"[ a ] ++ lib.optionals cfg.enable [ b ] ++ [ c ]\""
---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1 +1 @@
-[ a ] ++ lib.optionals cfg.enable [ b ] ++ [ c ]
+[ a c ] ++ lib.optionals cfg.enable [ b ]
