crates/cli/tests/snapshots/list_concat_merge__lint_1274c4e0cd15f1ee19771fdbe224795d74fb9e02b661299b8d75b5a17de60c3e.snap
---
source: crates/cli/tests/list_concat_merge.rs
assertion_line: 5
expression: "\"\\n        base\\n        ++ [ a b ]\\n        ++ [ c d ]\\n        ++ tail\\n        \""
---
[36] Warning: Multiple list concatenations that can be merged
   ╭─[<temp_file_path>:4:9]
   │
 4 │         ++ [ c d ]
   │         ─┬  
   │          ╰── Multiple list concatenations that can be merged
───╯
