crates/cli/tests/snapshots/list_concat_merge__lint_513704f803bef4e55c42e9f2d2bc867303c9fffc802b460de97a6a78db6e1bc9.snap
---
source: crates/cli/tests/list_concat_merge.rs
expression: "\"[ veryLongPackageName1 veryLongPackageName2 ] ++ lib.optionals cfg.enable [ pkg ] ++ [ veryLongPackageName3 veryLongPackageName4 ]\""
---
[35] Warning: Multiple list concatenations that can be merged
   ╭─[<temp_file_path>:1:1]
   │
 1 │ [ veryLongPackageName1 veryLongPackageName2 ] ++ lib.optionals cfg.enable [ pkg ] ++ [ veryLongPackageName3 veryLongPackageName4 ]
   │ ─────────────────────────────────────────────────────────────────┬────────────────────────────────────────────────────────────────  
   │                                                                  ╰────────────────────────────────────────────────────────────────── Multiple list concatenations that can be merged
───╯
