crates/cli/tests/snapshots/list_concat_merge__lint_62249a38f2ce16eab22a791b5fe6c7a9cb35886d6d9c02310781e54c85bf7890.snap
---
source: crates/cli/tests/list_concat_merge.rs
assertion_line: 5
expression: "\"[ a ] ++ [ b c ] ++ tail\""
---
[36] Warning: Multiple list concatenations that can be merged
   ╭─[<temp_file_path>:1:7]
   │
 1 │ [ a ] ++ [ b c ] ++ tail
   │       ─┬  
   │        ╰── Multiple list concatenations that can be merged
───╯
