crates/cli/tests/snapshots/list_concat_merge__lint_77a199b84b767750501a84db91a0a86e8fd8e630c5a506c52e8d115a41281899.snap
---
source: crates/cli/tests/list_concat_merge.rs
expression: "\"[ base ] ++ lib.optionals (config.features.enable && config.features.advanced) [ optional1 ] ++ [ extra1 extra2 ]\""
---
[35] Warning: Multiple list concatenations that can be merged
   ╭─[<temp_file_path>:1:1]
   │
 1 │ [ base ] ++ lib.optionals (config.features.enable && config.features.advanced) [ optional1 ] ++ [ extra1 extra2 ]
   │ ────────────────────────────────────────────────────────┬────────────────────────────────────────────────────────  
   │                                                         ╰────────────────────────────────────────────────────────── Multiple list concatenations that can be merged
───╯
