crates/cli/tests/snapshots/list_concat_merge__lint_79f8c7dcf8cf53a4d3d6050ad9e37e15dc055dc06082e0f4fc606f86bebe5bcc.snap
---
source: crates/cli/tests/list_concat_merge.rs
expression: "\"[ a b c ] ++ lib.optionals cfg.someCond [ d ] ++ [ e f g ]\""
---
[35] Warning: Multiple list concatenations that can be merged
   ╭─[<temp_file_path>:1:1]
   │
 1 │ [ a b c ] ++ lib.optionals cfg.someCond [ d ] ++ [ e f g ]
   │ ─────────────────────────────┬────────────────────────────  
   │                              ╰────────────────────────────── Multiple list concatenations that can be merged
───╯
