crates/cli/tests/snapshots/list_concat_merge__lint_8e35338b84b3727acc4ae5ec04918e9f57f4afbf61a61390fc8a02d76d33f00e.snap
---
source: crates/cli/tests/list_concat_merge.rs
assertion_line: 5
expression: "\"[ a b ] ++ [ c d ]\""
---
[36] Warning: Multiple list concatenations that can be merged
   ╭─[<temp_file_path>:1:9]
   │
 1 │ [ a b ] ++ [ c d ]
   │         ─┬  
   │          ╰── Multiple list concatenations that can be merged
───╯
