crates/cli/tests/snapshots/list_concat_merge__lint_99159bcc08a9e85af68a5bd1f15d18144860928e9c2ddf2a4dfb0b14f0fc7801.snap
---
source: crates/cli/tests/list_concat_merge.rs
assertion_line: 5
expression: "\"base ++ [ a b ] ++ [ c d ] ++ tail\""
---
[36] Warning: Multiple list concatenations that can be merged
   ╭─[<temp_file_path>:1:17]
   │
 1 │ base ++ [ a b ] ++ [ c d ] ++ tail
   │                 ─┬  
   │                  ╰── Multiple list concatenations that can be merged
───╯
