crates/cli/tests/snapshots/list_concat_merge__lint_d429c2b9d85d6e1f62a114663387039b428656c21f875da0c5d633e6c00b37dd.snap
---
source: crates/cli/tests/list_concat_merge.rs
assertion_line: 5
expression: "\"base ++ [ a ] ++ [ b c ]\""
---
[36] Warning: Multiple list concatenations that can be merged
   ╭─[<temp_file_path>:1:15]
   │
 1 │ base ++ [ a ] ++ [ b c ]
   │               ─┬  
   │                ╰── Multiple list concatenations that can be merged
───╯
