crates/cli/tests/snapshots/list_concat_merge__lint_dc1128080d474555841c377da2db10e90dbf29e8b9846dacd3f0b7518f6956c1.snap
---
source: crates/cli/tests/list_concat_merge.rs
expression: "\"[ a b ] ++ lib.optionals cfg.enable [ c ]\""
---

